update masthead colour to have correct contrast to text

--- a/gh-pages/src/bootstrap.css
+++ b/gh-pages/src/bootstrap.css
@@ -11085,7 +11085,7 @@ a.text-dark:focus {
 .masthead {
   padding-top: 6rem;
   padding-bottom: 3rem;
-  background-color: #bbbbbb !important;
+  background-color: #919191 !important;
 }
 
 .masthead .masthead-heading {
